# python-client

./: .gitignore  .travis.yml  LICENSE.txt  README.md  README.rst  miniflux.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  linters.yml  publish.yml  tests.yml
tests/: test_client.py
