[project]
name = "miniflux"
version = "1.1.5"
description = "Client library for Miniflux"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["rss", "atom", "rdf", "jsonfeed", "feed", "miniflux"]
authors = [
  {name = "Frédéric Guillot", email = "fred@miniflux.net"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "requests"
]

[project.urls]
"Homepage" = "https://github.com/miniflux/python-client"
"Bug Reports" = "https://github.com/miniflux/python-client/issues"
"Source" = "https://github.com/miniflux/python-client"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
